# ProSkills

./: .gitignore  README.md  pyproject.toml
ProSkills-BE/: .isort.cfg  Dockerfile  alembic.ini  docker-compose.yml  requirements.txt  start.sh
ProSkills-BE/alembic/: env.py
ProSkills-BE/backend/: config.py  constants.py  main.py  oauth2.py
ProSkills-BE/backend/controllers/: admin_stats.py  assignments.py  auth.py  courses.py  filesForCourse.py  progress.py  reviews.py  sections.py  students.py
ProSkills-BE/backend/dependencies/: s3.py
ProSkills-BE/backend/middlewares/: cors.py
ProSkills-BE/backend/models/: __init__.py  assignment.py  course.py  enrollment.py  ourusers.py  progress.py  review.py
ProSkills-BE/backend/schemas/: admin.py  assignment.py  course.py  file.py  progress.py  review.py
ProSkills-BE/backend/services/: review.py  user_service.py  websocket.py
ProSkills-FE/src/api/: assignments.ts  auth.ts  courseSections.ts  courses.ts  files.ts  progress.ts  students.ts  urls.ts
ProSkills-FE/src/components/AssignmentItem/: index.tsx
ProSkills-FE/src/components/AssignmentModal/: index.tsx
ProSkills-FE/src/components/AssignmentsList/: index.tsx
ProSkills-FE/src/components/AuthForm/: index.tsx
ProSkills-FE/src/constants/: availableCourseActions.ts  availableHeaderTabs.tsx  formInputs.tsx
ProSkills-FE/src/models/: Auth.ts  Course.ts  Student.ts
ProSkills-FE/src/routes/: index.tsx  paths.ts
ProSkills-FE/src/store/: useAssignmentsStore.ts  useAuthStore.ts
ProSkills-FE/src/utils/: authUtils.tsx  axiosUtils.ts
(+25 files in other folders)
