[tool.poetry]
name = "proskills"
version = "0.1.0"
description = ""
authors = ["Vasyl Radashev <vasiliyradashev24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
email-validator = "^2.2.0"
python-dotenv = "^1.1.0"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-jose = "^3.4.0"
cryptography = "^44.0.3"
redis = "^6.1.0"
aioredis = "^2.0.1"
celery = "^5.5.2"
asgiref = "^3.8.1"
boto3 = "^1.38.17"
s3transfer = "^0.12.0"
anyio = "^4.9.0"
async-timeout = "^5.0.1"
dnspython = "^2.7.0"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
